# counselor

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  __main__.py  app.py  init_db.py  pyproject.toml  requirements.txt  settings.example.yaml
backend/alembic/: env.py
backend/alembic/versions/: 1b8be2a6254d_added_badges_system.py  2413bdff9a4a_init.py  2d527ab4ef34_added_folders_and_folders_candidates.py  9ddaeaf211c9_added_courses_and_xp_in_user.py  abe8084bfe0f_added_jobs_model.py  d652f91df6d2_add_new_cv_fields.py  eeef8bfaced5_added_course_enrolments.py
backend/llm_service/: LLM_service.md
backend/llm_service/tests/: test_embeddings.py  test_extract.py  test_hr_query_tags.py  test_llm_tasks_smoke.py  test_resume_structure.py  test_resume_tags.py  test_tags_smoke.py
backend/scripts/: check_cvs.py  check_postgres.py  check_users_and_cvs.py  demo_cv_logic.py  init_badges.py  populate_courses.py  populate_users_and_cvs.py  test_badges.py  test_cv_xp.py
backend/services/nougat-worker/: Dockerfile  requirements.txt  server.py
backend/src/: __init__.py  config.py  config_schema.py
backend/src/api/: __init__.py  __main__.py  app.py
backend/src/modules/: __init__.py
backend/src/storages/: __init__.py
backend/t1hack/: bruno.json  collection.bru  courses.bru  cv upload.bru  delete cv.bru  deleted.bru  download cv.bru  employess for job.bru  get cv.bru  get info about employee.bru  login.bru  my cvs.bru  register.bru  restore cv.bru  update cv.bru
deploy/: .env.example  (+1 more)
(+86 files in other folders)
